Fixed: OSS::TogglableSection padding & alignment + option to pass a badge

--- a/app/styles/molecules/togglable-section.less
+++ b/app/styles/molecules/togglable-section.less
@@ -1,5 +1,7 @@
 .togglable-section {
   &:extend(.upf-banner);
+  padding: 0;
+  height: fit-content;
 
   .inner-header {
     border-top-right-radius: var(--border-radius-md);
